a few changes - estetic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <hi>Hello my dear</hi>
+            <h1>Hello my dear</h1>
             <button>Hello</button>
         </header>
         <div class="contact">
